concluded the org logo widget + method for displaying the proper logo + fix for logo distortion

--- a/mootiro_komoo/apps/main/static/css/styles.css
+++ b/mootiro_komoo/apps/main/static/css/styles.css
@@ -1666,8 +1666,8 @@ div.view-list-item.odd {
 }
 .organization-logo{
     /* placeholder for logo TODO: remove this and replace by img */
-    width: 80px;
-    height: 60px;
+    max-width: 80px;
+    max-height: 60px;
     margin-right: 20px;
 }
 .right-bar-modif{
@@ -1846,15 +1846,15 @@ textarea.markItUpEditor{
 }
 .org-list-img{
     padding-right: 10px;
-    width: 80px;
-    height: 60px;
+    max-width: 80px;
+    max-height: 60px;
 }
-.org-list-img-placeholder{
-    padding-right: 10px;
-    width: 80px;
-    height: 38px;
-    padding-top: 10px;
-}
+/* .org-list-img-placeholder{ */
+/*     padding-right: 10px; */
+/*     width: 80px; */
+/*     height: 38px; */
+/*     padding-top: 10px; */
+/* } */
 .org-list-extra-info{
     width: 300px;
     vertical-align: top;
